<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="@dimen/titulos"
        android:gravity="center"
        android:layout_marginBottom="@dimen/small_gap"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_weight="1"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="horizontal"
           android:layout_marginBottom="@dimen/small_gap">

           <LinearLayout
               android:id="@+id/bt_1"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:background="@color/color1"
               android:layout_marginLeft="@dimen/small_gap"
               android:layout_marginRight="@dimen/small_gap"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="@string/producto_1"
                   android:textColor="@color/blanco"
                   android:layout_weight="2"/>

               <TextView
                   android:id="@+id/txt1"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="0"
                   android:textColor="@color/blanco"
                   android:textSize="@dimen/contador"
                   android:layout_weight="1"/>

           </LinearLayout>

           <LinearLayout
               android:id="@+id/bt_2"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:background="@color/color2"
               android:layout_marginLeft="@dimen/small_gap"
               android:layout_marginRight="@dimen/small_gap"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="@string/producto_2"
                   android:textColor="@color/blanco"
                   android:layout_weight="2"/>

               <TextView
                   android:id="@+id/txt2"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="0"
                   android:textColor="@color/blanco"
                   android:textSize="@dimen/contador"
                   android:layout_weight="1"/>
           </LinearLayout>

           <LinearLayout
               android:id="@+id/bt_3"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:background="@color/color3"
               android:layout_marginLeft="@dimen/small_gap"
               android:layout_marginRight="@dimen/small_gap"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="@string/producto_3"
                   android:textColor="@color/blanco"
                   android:layout_weight="2"/>

               <TextView
                   android:id="@+id/txt3"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="0"
                   android:textColor="@color/blanco"
                   android:textSize="@dimen/contador"
                   android:layout_weight="1"/>
           </LinearLayout>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="horizontal"
           android:layout_marginBottom="@dimen/small_gap">

           <LinearLayout
               android:id="@+id/bt_4"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:background="@color/color3"
               android:layout_marginLeft="@dimen/small_gap"
               android:layout_marginRight="@dimen/small_gap"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="@string/producto_5"
                   android:textColor="@color/blanco"
                   android:layout_weight="2"/>

               <TextView
                   android:id="@+id/txt4"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="0"
                   android:textColor="@color/blanco"
                   android:textSize="@dimen/contador"
                   android:layout_weight="1"/>
           </LinearLayout>

           <LinearLayout
               android:id="@+id/bt_5"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:background="@color/color2"
               android:layout_marginLeft="@dimen/small_gap"
               android:layout_marginRight="@dimen/small_gap"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="@string/producgto_5"
                   android:textColor="@color/blanco"
                   android:layout_weight="2"/>

               <TextView
                   android:id="@+id/txt5"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="0"
                   android:textColor="@color/blanco"
                   android:textSize="@dimen/contador"
                   android:layout_weight="1"/>
           </LinearLayout>

           <LinearLayout
               android:id="@+id/bt_6"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:background="@color/color1"
               android:layout_marginLeft="@dimen/small_gap"
               android:layout_marginRight="@dimen/small_gap"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="@string/producto_6"
                   android:textColor="@color/blanco"
                   android:layout_weight="2"/>

               <TextView
                   android:id="@+id/txt6"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="0"
                   android:textColor="@color/blanco"
                   android:textSize="@dimen/contador"
                   android:layout_weight="1"/>
           </LinearLayout>
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="horizontal"
           android:layout_marginBottom="@dimen/small_gap">

           <LinearLayout
               android:id="@+id/bt_7"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:background="@color/color2"
               android:layout_marginLeft="@dimen/small_gap"
               android:layout_marginRight="@dimen/small_gap"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="@string/producto_7"
                   android:textColor="@color/blanco"
                   android:layout_weight="2"/>

               <TextView
                   android:id="@+id/txt7"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="0"
                   android:textColor="@color/blanco"
                   android:textSize="@dimen/contador"
                   android:layout_weight="1"/>
           </LinearLayout>

           <LinearLayout
               android:id="@+id/bt_8"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:background="@color/color1"
               android:layout_marginLeft="@dimen/small_gap"
               android:layout_marginRight="@dimen/small_gap"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="@string/producto_8"
                   android:textColor="@color/blanco"
                   android:layout_weight="2"/>

               <TextView
                   android:id="@+id/txt8"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="0"
                   android:textColor="@color/blanco"
                   android:textSize="@dimen/contador"
                   android:layout_weight="1"/>
           </LinearLayout>

           <LinearLayout
               android:id="@+id/bt_9"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:background="@color/color3"
               android:layout_marginLeft="@dimen/small_gap"
               android:layout_marginRight="@dimen/small_gap" android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="@string/producto_9"
                   android:textColor="@color/blanco"
                   android:layout_weight="2"/>

               <TextView
                   android:id="@+id/txt9"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:text="0"
                   android:textColor="@color/blanco"
                   android:textSize="@dimen/contador"
                   android:layout_weight="1"/>
           </LinearLayout>
       </LinearLayout>


   </LinearLayout>

    <LinearLayout
        android:padding="@dimen/small_gap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/medium_gap">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/usuario"/>

        <EditText
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint"
            android:layout_marginBottom="@dimen/small_gap"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/correo"/>

        <EditText
            android:id="@+id/txt_corroe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_hint"
            android:layout_marginBottom="@dimen/medium_gap"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>