<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Factura">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/factura"
        android:textSize="@dimen/titulos"
        android:gravity="center" />

    <LinearLayout
        android:padding="@dimen/small_gap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/medium_gap">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="20sp"
            android:text="@string/usuario"/>

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/correo"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="Total de productos:"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtCant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Detalle de producto"
        android:textSize="@dimen/titulos"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/small_gap">

            <LinearLayout
                android:id="@+id/bt_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color1"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginRight="@dimen/small_gap"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/producto_1"
                    android:textColor="@color/blanco"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/itxt1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="#"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/contador"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bt_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color2"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginRight="@dimen/small_gap"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/producto_2"
                    android:textColor="@color/blanco"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/itxt2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="#"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/contador"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bt_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color3"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginRight="@dimen/small_gap"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/producto_3"
                    android:textColor="@color/blanco"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/itxt3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="#"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/contador"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/small_gap">

            <LinearLayout
                android:id="@+id/bt_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color3"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginRight="@dimen/small_gap"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/producto_5"
                    android:textColor="@color/blanco"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/itxt4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="#"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/contador"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bt_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color2"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginRight="@dimen/small_gap"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/producgto_5"
                    android:textColor="@color/blanco"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/itxt5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="#"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/contador"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bt_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color1"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginRight="@dimen/small_gap"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/producto_6"
                    android:textColor="@color/blanco"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/itxt6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="#"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/contador"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/small_gap">

            <LinearLayout
                android:id="@+id/bt_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color2"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginRight="@dimen/small_gap"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/producto_7"
                    android:textColor="@color/blanco"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/itxt7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="#"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/contador"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bt_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color1"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginRight="@dimen/small_gap"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/producto_8"
                    android:textColor="@color/blanco"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/itxt8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="#"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/contador"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bt_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color3"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_marginRight="@dimen/small_gap" android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/producto_9"
                    android:textColor="@color/blanco"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/itxt9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="#"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/contador"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_gravity="center"/>

</LinearLayout>